[Role] add role feature (#4)
* feat(app): add role routes

* feat(role): add http handler role

* docs: add API Spec role

* feat(app): add domain factory role

* feat(role): add repository handler role

* feat(role): role migration schema

* feat(role): role table representation

* feat(role): role request DTO

* feat(role): role response DTO

* fix: rename category service test file

* feat(role): add service handler role
