# models/domain/role.go
@@ -1,0 +1,11 @@
+package domain
+
+import "time"
+
+type Role struct {
+	ID         string
+	Role       string
+	Visibility string
+	CreatedAt  time.Time
+	UpdatedAt  time.Time
+}
